<resources>
    <string name="app_name">Wares Catalogue</string>
    <string name="add_button_text">Add</string>
    <string name="ware_name">Ware Name</string>
    <string name="ware_description">Ware Description</string>
    <string name="price">Price</string>
    <string name="create_ware_button">Create Ware</string>
    <string name="price_label">Price:</string>
    <string name="description_label">Description:</string>
    <string name="name_label">Name:</string>
    <string name="update_button_text">Update</string>
    <string name="currency_sign">$</string>
</resources>