<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdditionActivity"
    android:orientation="vertical"
    android:layout_margin="16dp">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_name"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/ware_name"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_description"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/ware_description"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_price"
        android:inputType="numberDecimal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/price"/>
    
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_persist"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        tools:text="@string/create_ware_button"/>

</androidx.appcompat.widget.LinearLayoutCompat>