<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/light_gray">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/display_name"
                android:text="@string/name_label"
                android:textSize="16sp"
                android:layout_marginEnd="6dp"/>
            <TextView
                android:id="@+id/display_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                tools:text="@string/ware_name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/display_description"
                android:text="@string/description_label"
                android:textSize="16sp"
                android:layout_marginEnd="6dp"/>
            <TextView
                android:id="@+id/display_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/ware_description"
                android:textSize="16sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/display_description"
                android:text="@string/price_label"
                android:textSize="16sp"
                android:layout_marginEnd="6dp"/>
            <TextView
                android:id="@+id/display_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/price"
                android:textSize="16sp"/>
        </LinearLayout>

    </LinearLayout>


</com.google.android.material.card.MaterialCardView>